--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zadanie_17_7",
   "version": "1.0.0",
   "description": "Uwierzytelnianie aplikacji za pomocą Google",
-  "main": "config.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
